--- a/iframe.css
+++ b/iframe.css
@@ -6,6 +6,10 @@ body {
 	background-color: white;
 }
 
+hr {
+	opacity: 0.35;
+}
+
 #convo-container {
 	height: 125px;
 	overflow: auto;
@@ -24,8 +28,8 @@ input {
 	width: 277px;
 	height: 35px;
 	outline: none;
-	font-size: 25px;
-	margin-bottom: 5px;
+	font-size: 22px;
+	margin-bottom: 4.9px;
 	vertical-align: bottom;
 }
 
@@ -52,7 +56,7 @@ input {
 	pointer-events: none;
 	opacity: .35;
 	position: relative;
-	bottom: 4px;
+	bottom: 3px;
 	left: 14px;
 }
 
